2011-09-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/utils.h, src/editor.c:
   Use GRegex for snippet indentation replacement - fixes wrong 
   behaviour with Mac line endings.


2011-09-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c, doc/pluginsignals.c:
   When saving on build, prompt for a filename if necessary.
   Emit the "build-start" signal only if saving succeeds.


2011-09-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c:
   Use #ifdef SYNC_SPAWN instead of G_OS_WIN32 for easier testing with 
   glib's asynchronous spawning (currently doesn't work on Windows).
 * src/win32.c, src/win32.h, src/dialogs.c:
   Use GTK unsaved file dialog on Windows too because the button names 
   should be specific.


2011-09-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keyfile.c:
   Rename use_safe_file_saving various pref to use_atomic_file_saving 
   as it's not 'safe'. Use old pref if new one is missing for 
   compatibility with Geany <= 0.20.


2011-09-17  Frank Lanitz  <frlan@frank.uvena.de>

 * po/fa.po, THANKS, src/about.c:
   Adding Persian translation. Thanks to Moein Owhadi Kareshk
 * THANKS: Adding Giuliano Manzitti to THANKS-file.


2011-09-16  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/ui_utils.c:
   Fix document sensitivity of a few menu items.


2011-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, geany.glade:
   Change various prefs label to /warn/ the user to read the manual.


2011-09-15  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/utils.c:
   Ask the user to configure a valid browser command if spawning it
   fails rather than falling back to some arbitrary hardcoded defaults.


2011-09-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/win32.c:
   Fix uninitialized font size & other fields.
   Remove unhooked font dialog apply button.

